--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ serde_json = "1.0"
 serde = { version = "1.0.154", features = ["derive"] }
 reqwest =  { version = "0.11.14", features = ["blocking"] }
 regex = "1.7.1"
-rayon = "1.7.0"
+tokio = { version = "1.26.0", features = ["full", "sync"] }
+futures = "0.3.27"
